# hunl-bot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  NEXT_STEPS.md  PROJECT_CHECKLIST.md  README.md  pyproject.toml  readmeyoubitch.txt  requirements.txt
configs/: blueprint.deepcfr.yaml  env.yaml  eval.yaml  league.yaml  resolver.yaml  rl.ppo.yaml
docker/: Dockerfile  compose.yaml
docs/: ABSTRACTION.md  DESIGN.md  EVAL.md  RESOLVE.md
notebooks/: board_bucketing.ipynb  sanity_env.ipynb
scripts/: eval_ladder.sh  export_policy.sh  train_blueprint.sh  train_rl.sh
src/hunl/abstraction/: __init__.py  bet_sizing_schemes.py  board_texture.py  card_bucketing.py
src/hunl/blueprint/: datasets.py  deepcfr_trainer.py  nfsp_trainer.py  policy_export.py
src/hunl/cli/: eval.py  play_headless.py  train_blueprint.py  train_rl.py
src/hunl/env/: __init__.py  action_space.py  hunl_env.py  reward.py  state_encoder.py
src/hunl/eval/: ladders.py  metrics.py  probes.py
src/hunl/inference/: policy_runner.py  server.py
src/hunl/league/: exploiters.py  gating.py  pool.py
src/hunl/opponent/: mix_policy.py  stats.py
src/hunl/resolver/: boundaries.py  cfr_resolver.py  nn_resolver.py  subgame_builder.py
src/hunl/rl/: distillation.py  losses.py
src/hunl/rl/agents/: networks.py  ppo.py
src/hunl/utils/: __init__.py  config.py  logging.py  serialization.py  timers.py
src/hunl_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_abstraction.py  test_action_space.py  test_env.py  test_eval_metrics.py  test_resolver.py  test_rl_shapes.py
(+2 files in other folders)
