[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hunl-bot"
version = "0.1.0"
description = "Heads-Up No-Limit Poker RL Bot"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "torch",
  "numpy",
  "omegaconf",
  "pytest",
  "black",
  "isort",
  "flake8",
  "matplotlib",
  "pandas",
  "openspiel"
]

[tool.setuptools.packages.find]
where = ["src"]
